Refactor to use absolute-path references
- https://webmasters.stackexchange.com/questions/56840/what-is-the-purpose-of-leading-slash-in-html-urls
- https://tools.ietf.org/html/rfc3986#section-4

--- a/landingcorp/css/_template.scss
+++ b/landingcorp/css/_template.scss
@@ -124,7 +124,7 @@ body {
   &::before {
     position: absolute;
     content: "";
-    background-image: url("./../images/slider_bg.png");
+    background-image: url("/images/slider_bg.png");
     top: 0;
     left: 0;
     width: 100%;
