--- a/landingcorp/css/_template.scss
+++ b/landingcorp/css/_template.scss
@@ -98,6 +98,17 @@ body {
     }
 
     .navbar-nav {
+      .show {
+        .dropdown-toggle {
+          &::after {
+            font: normal normal normal 14px/1 FontAwesome;
+            content: "\f106" !important;
+            border: 0;
+            position: relative;
+            top: 4px;
+          }
+        }
+      }
       .nav-item {
         .nav-link {
           font-size: 0.938rem;
@@ -105,6 +116,15 @@ body {
           text-transform: capitalize;
           font-weight: 500;
           padding: 0.5rem 1rem;
+        }
+        .dropdown-toggle {
+          &::after {
+            font: normal normal normal 14px/1 FontAwesome;
+            content: "\f107";
+            border: 0;
+            position: relative;
+            top: 4px;
+          }
         }
         .solution_area {
           left: -210px !important;
@@ -139,7 +159,7 @@ body {
               .learn_product {
                 bottom: 70px;
                 display: inline-block;
-                left: 40px;
+                left: 30px;
                 position: absolute;
 
                 a {
