--- a/landingcorp/css/_template.scss
+++ b/landingcorp/css/_template.scss
@@ -421,7 +421,14 @@ body {
     cursor: pointer;
 
     .single_news {
-      padding: 30px 20px;
+      padding: 15px 20px 15px 20px;
+
+      &:first-child{
+        padding-top: 30px;
+      }
+      &:last-child{
+        padding-bottom: 30px;
+      }
 
       &:hover {
         background-color: $accentPrimaryColor;
@@ -1062,6 +1069,9 @@ body {
 
           .eye_braw {
             color: #9396a2;
+          }
+          .highlight{
+            color: $blackColor;
           }
           h3 {
             color: $blackColor;
