--- a/landingcorp/css/_template.scss
+++ b/landingcorp/css/_template.scss
@@ -672,7 +672,6 @@ body {
       }
 
       .logo {
-        padding-top: 100%;
         position: relative;
 
         img {
@@ -698,14 +697,14 @@ body {
     }
   }
   .call_to_action_info {
-    padding-left: 80px;
     p {
       color: $foregroundSecondaryColor;
-      font-size: $mediumSize;
-      line-height: 2rem;
+      font-size: 1.1rem;
+      line-height: 1.5rem;
+      margin-bottom: 0;
     }
     .content_and_link {
-      margin-top: 30px;
+      margin-top: 10px;
       a {
         display: inline-block;
         padding: 12px 20px;
@@ -995,15 +994,15 @@ body {
   .call_to_action_section {
     .call_to_action_title {
       h3 {
-        font-size: 1.6rem;
-        line-height: 2rem;
+        font-size: 2rem;
+        line-height: 3rem;
       }
     }
     .call_to_action_info {
       padding-left: 0;
 
       p {
-        font-size: 1.2rem;
+        font-size: 1rem;
         line-height: 1.6rem;
       }
     }
@@ -1161,12 +1160,13 @@ body {
   .call_to_action_section {
     .call_to_action_title {
       h3 {
-        margin-bottom: 25px;
+        margin-bottom: 15px;
       }
     }
     .call_to_action_info {
       p {
         font-size: 1rem;
+        margin-bottom: 20px;
       }
     }
   }
@@ -1261,4 +1261,24 @@ body {
       }
     }
   }
+  .call_to_action_section {
+    .call_to_action_title{
+      h3{
+        font-size: 1.6rem;
+      }
+    }
+    .call_to_action_info {
+      .content_and_link {
+        a{
+          padding: 10px 12px;
+          font-size: 14px;
+        }
+        .sale_btn{
+          margin-bottom: 10px;
+          margin-right: 10px;
+        }
+      }
+    }
+  }
 }
+
